res/examples/invalid/call_noncallable_list.eg
[]();
[1, 2, 3]();

// out: TypeError: list<unknown> is not callable
// out: TypeError: list<number> is not callable